WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36371
[Gtk] Elements with a title attribute should not be ignored
https://bugs.webkit.org/show_bug.cgi?id=36371
Summary
[Gtk] Elements with a title attribute should not be ignored
Joanmarie Diggs
Reported
2010-03-19 08:12:40 PDT
Currently we ignore any element which does not itself contain content. Thus given: <div class="note" title="Note"> <div class="inner"> <div class="contents"> <p class="p">Note contents</p> </div> </div> </div> We'd expose: -> Document Frame -> Paragraph (text: Note contents) If the content provider has specified a title attribute, we should include that element in the hierarchy. When we do so, the title attribute should automatically become exposed as the accessible description, i.e.: -> Document Frame -> Section (description: Note) -> Paragraph (text: Note contents)
Attachments
proposed fix
(5.21 KB, patch)
2010-03-22 12:32 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joanmarie Diggs
Comment 1
2010-03-19 08:54:55 PDT
Chris: What's the story on the Mac? Do VoiceOver users have a need for this as well, or should it be limited to Gtk?
chris fleizach
Comment 2
2010-03-19 09:25:04 PDT
thats reasonable i think. on the mac, that will be exposed as an AXGroup, which is ok
Joanmarie Diggs
Comment 3
2010-03-22 12:32:46 PDT
Created
attachment 51334
[details]
proposed fix
Eric Seidel (no email)
Comment 4
2010-03-25 01:48:40 PDT
Comment on
attachment 51334
[details]
proposed fix Looks reasonable to my eye.
WebKit Commit Bot
Comment 5
2010-03-25 04:44:54 PDT
Comment on
attachment 51334
[details]
proposed fix Clearing flags on attachment: 51334 Committed
r56530
: <
http://trac.webkit.org/changeset/56530
>
WebKit Commit Bot
Comment 6
2010-03-25 04:44:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug