2010-03-25  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=36371
        [Gtk] Elements with a title attribute should not be ignored

        * platform/gtk/accessibility/object-with-title.html: Added
        * platform/gtk/accessibility/object-with-title-expected.txt: Added
2010-03-25  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=36371
        [Gtk] Elements with a title attribute should not be ignored

        * accessibility/AccessibilityRenderObject.cpp:
        (AccessibilityRenderObject::accessibilityIsIgnored):

Canonical link: https://commits.webkit.org/47824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56530 268f45cc-cd09-0410-ab3c-d52691b4dbfc